Update API tags
